--- a/modelicaml/kepler/org.openmodelica.modelicaml.modelica.importer/plugin.xml
+++ b/modelicaml/kepler/org.openmodelica.modelicaml.modelica.importer/plugin.xml
@@ -69,7 +69,6 @@
    -->
 
    <extension point="org.eclipse.ui.menus">
-      <!--
       <menuContribution
             allPopups="false"
             locationURI="toolbar:org.eclipse.ui.main.toolbar">
@@ -77,7 +76,8 @@
                id="org.openmodelica.modelicaml.modelica.toolbar"
                label="Modelica Models Synchronization">
             <separator
-                  name="org.openmodelica.modelicaml.modelica.importer.separator3">
+                  name="org.openmodelica.modelicaml.modelica.importer.separator3"
+                  visible="true">
             </separator>
             <command
                   commandId="org.openmodelica.modelicaml.modelica.commands.synchronizemodelicamodelproxies"
@@ -105,7 +105,6 @@
             </visibleWhen>
          </toolbar>
       </menuContribution>
-      -->
       
       <!-- NOTE: the menu is moved to the model explorer plugin.xml to appear at a certain position
       <menuContribution
