--- a/modelicaml/kepler/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
+++ b/modelicaml/kepler/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
@@ -174,6 +174,7 @@ s_p_message = message
 
 # Stereotypes: Modelica Annotation
 s_annotation = Annotation
+s_p_fullAnnotationString = fullAnnotationString
 
 s_annotation_icon = Annotation(Icon)
 s_p_iconAnnotationString = iconAnnotationString
